# stdsharp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/actions/: action.yml  apt-fetch-clang.yml  cmake-build-and-test.yml  update-msvc.yml
.github/actions/apt-fetch-clang/: action.yml
.github/actions/update-msvc/: action.yml  update-vs.ps1
.github/workflows/: build-and-test.yml  build.yml  macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: CCache.cmake  CPM.cmake  Conan.cmake  Format.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake  version.h.in
cmake/vcpkg/toolchains/: linux-clang.cmake
cmake/vcpkg/triplets/: x64-linux-clang.cmake
include/: concurrent_object.h  containers.h  default_operator.h  enumeration.h  indirect.h  pattern_match.h  regular_operation.h  scope.h
include/algorithm/: algorithm.h
include/cassert/: cassert.h
include/concepts/: concepts.h
include/containers/: actions.h  containers.h
include/cstdint/: cstdint.h
include/cuchar/: cuchar.h
include/filesystem/: filesystem.h
include/format/: format.h
include/fstream/: fstream.h
include/functional/: bind.h  compose.h  cpo.h  decompose.h  decompose_to.h  functional.h  get.h  invocable_obj.h  invocables.h  invoke.h  make_returnable.h  operation.h  operations.h  pipeable.h  projection.h  symmetric_operations.h  trivial_overload.h
include/functional/symmetric/: operation.h  operations.h
include/iterator/: iterator.h
include/memory/: memory.h
include/mutex/: mutex.h  shared_mutex.h
include/property/: getter.h  property.h  setter.h
include/random/: random.h
include/ranges/: ranges.h
include/reflection/: reflection.h
include/stdsharp/: compilation_config_in.h  compilation_config_out.h  concurrent_object.h  default_operator.h  enumeration.h  indirect.h  lazy.h  macros.h  namespace_alias.h  pattern_match.h  scope.h  synchronizer.h  type_erasure.h
include/stdsharp/algorithm/: algorithm.h
include/stdsharp/array/: array.h
include/stdsharp/bitset/: bitset.h
include/stdsharp/cassert/: cassert.h
include/stdsharp/cmath/: cmath.h
include/stdsharp/compare/: compare.h
include/stdsharp/concepts/: concepts.h  object.h  type.h
include/stdsharp/containers/: actions.h  concepts.h  containers.h
include/stdsharp/cstdint/: cstdint.h
include/stdsharp/cuchar/: cuchar.h
include/stdsharp/details/: epilogue.h  prologue.h
include/stdsharp/exception/: exception.h
include/stdsharp/filesystem/: filesystem.h  space_size.h
include/stdsharp/format/: format.h
include/stdsharp/fstream/: fstream.h
include/stdsharp/functional/: always_return.h  bind.h  bind_as_lvlaue.h  bind_front.h  bind_lvalue.h  compose.h  conditional_invoke.h  cpo.h  decompose.h  empty_invoke.h  forward_bind.h  fp.h  functional.h  invocables.h  invoke.h  invoke_r.h  make_returnable.h  nodiscard_invocable.h  operations.h  optional_invoke.h  perfect_bind_front.h  pipeable.h  project_invoke.h  projection.h  (+2 more)
include/string/: string.h
include/tuple/: tuple.h
include/type_traits/: core_traits.h  function.h  member.h  object.h  type_sequence.h  type_traits.h  value_sequence.h
include/utility/: algorithm.h  assert.h  cassert.h  concurrent_object.h  functional.h  pack_get.h  pattern_match.h  random.h  string_conversion.h  type_traits.h  utility.h  utility_core.h  value_wrapper.h
tests/: .clang-tidy  CMakeLists.txt
tests/include/: algorithm_test.h  box.h  concurrent_object_test.h  containers_test.h  pattern_match_test.h  random_test.h  test.h  test_allocator.h  test_utils.h  test_worst_type.h  utility_test.h
tests/include/containers/: actions_test.h
tests/include/filesystem/: filesystem_test.h
tests/include/functional/: decompose_test.h  get_test.h  symmetric_operations_test.h
tests/include/functional/symmetric/: operations_test.h
tests/include/property/: property_test.h
tests/include/traits/: member_test.h  sequence_test.h  type_sequence_test.h  value_sequence_test.h
tests/include/type_traits/: member_test.h  type_sequence_test.h  value_sequence_test.h
tests/include/utility/: utility_test.h
tests/src/: algorithm_test.cpp  concurrent_object_test.cpp  containers_test.cpp  default_operator.cpp  lazy.cpp  lazy_value.cpp  lazy_value_test.cpp  main.cpp  pattern_match.cpp  pattern_match_test.cpp  random_test.cpp  synchronizer.cpp  synchronizer_test.cpp  tests.cpp  utility_test.cpp
tests/src/algorithm/: algorithm.cpp  algorithm_test.cpp
tests/src/bitset/: bitset.cpp
tests/src/containers/: actions.cpp  actions_test.cpp  concepts.cpp  concepts_test.cpp  containers_test.cpp
tests/src/filesystem/: filesystem.cpp  filesystem_test.cpp  space_size.cpp
tests/src/functional/: decompose_test.cpp  forward_bind.cpp  get_test.cpp  invocables.cpp  perfect_bind_front.cpp  pipeable.cpp  pipeable_test.cpp  sequenced_invocables.cpp  symmetric_operations.cpp  symmetric_operations_test.cpp
tests/src/functional/symmetric/: operations_test.cpp
tests/src/memory/: allocation_value.cpp  box.cpp  box_test.cpp  composed_allocator.cpp  composed_allocator_test.cpp  fixed_single_allocator.cpp  launder_iterator.cpp  object_allocation_test.cpp  pointer_traits.cpp  raii_memory_test.cpp  scoped_memory_test.cpp  single_stack_allocator.cpp  single_stack_allocator_test.cpp  single_static_buffer.cpp  single_static_buffer_test.cpp  small_object_optimization_test.cpp  soo.cpp  soo_test.cpp  static_allocator_test.cpp
tests/src/property/: property_test.cpp
tests/src/random/: random.cpp
tests/src/traits/: member_test.cpp  sequence_test.cpp  type_sequence_test.cpp  value_sequence_test.cpp
tests/src/tuple/: tuple_test.cpp
tests/src/type_traits/: indexed_traits.cpp  member.cpp  member_test.cpp  type_sequence.cpp  type_sequence_test.cpp  value_sequence.cpp  value_sequence_test.cpp
tests/src/utility/: adl_proof.cpp  dispatcher.cpp  forward_cast.cpp  utility.cpp  utility_test.cpp  value_wrapper.cpp
tests/ut/include/boost/: ut.hpp
(+93 files in other folders)
